# monorepo

./: .buildinfo  .gitignore  .pre-commit-config.yaml  genindex.html  mypy.ini  pixi.toml  pyproject.toml  searchindex.js
.doctrees/: environment.pickle  index.doctree  package1.doctree  package2.doctree
.github/workflows/: documentation.yml  tests.yml
docs/: .jupyterlite.doit.db  conf.py  index.html  index.rst  markdown.md  objects.inv  package1.html  package1.rst  package2.rst  search.html  searchindex.js  try_examples.json
docs/.doctrees/: environment.pickle  index.doctree  package1.doctree  package2.doctree
docs/_static/.ipynb_checkpoints/: test-checkpoint.md
docs_source/_static/: Qiskit.ipynb
package1/: CHANGELOG.md  bad_format.py  bad_typing.py  pyproject.toml
package1/src/package1/: __init__.py  _code.py
package1/tests/: test_code.py
package2/: CHANGELOG.md  pyproject.toml
package2/src/package2/: __init__.py  _code.py
package2/tests/: test_code2.py
pr-preview/pr-1/: index.html  package2.html  searchindex.js
pr-preview/pr-1/.doctrees/: environment.pickle  index.doctree
pr-preview/pr-1/_sources/: package1.rst.txt
source/: conf.py
