[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "monorepo_package1"
version = "0.1.0"
authors = [{ name = "Matt Haberland", email = "mhaberla@calpoly.edu" }]
description = "Short description here"
license = { text = "MIT" }
requires-python = ">=3.10"


[dependencies]
# Runtime dependencies for package1


[tool.flit.module]
name = "package1"
