[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "monorepo_package1"
version = "0.1.0"
authors = [{ name = "Matt Haberland", email = "matt.haberland@gmail.com" }]
description = "Short description here"
license = { text = "MIT" }
requires-python = ">=3.10"


[dependencies]
# Runtime dependencies for package1


[tool.flit.module]
name = "package1"


[tool.semantic_release]
version_variable = "package1/__init__.py:__version__"
version_source = "tag"
branch = "main"
upload_to_pypi = false  # Set to true for real releases
build_command = "flit build"
tag_format = "package1-v{version}"
upload_to_release = false


[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.logging]
level = "DEBUG"

[tool.flit.publish]
repository = "https://test.pypi.org/legacy/"
