[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "package2"
version = "0.1.0"
authors = [{ name = "Matt Haberland", email = "mhaberla@calpoly.edu" }]
requires-python = ">=3.10"


[dependencies]
# Runtime dependencies for package1
package1 = ">=0.0, <1.0"